--- a/views/student.xml
+++ b/views/student.xml
@@ -9,17 +9,27 @@
             <header>       
                 <button class='oe_highlight' state='in_progress' string="Confirm Done Pakka" 
                 name="change_status_button" type="object" 
-                attrs="{'invisible': [('state','=', 'done')] }"/>/>
+                attrs="{'invisible': [('state','=', 'done')] }"/>
                 <field name="state" widget="statusbar" statusbar_visible="in_progress,done"/>
+                <button class='oe_highlight' string="Send Note" name="send_message_button" type="object" />
             </header>
             <sheet>
-               <group string="School Management">
-                   <group>
-                       <field name="name"/>
-                       <field name="marks"/>
-                                <button string='Action Btn' name="%(bi_school_management.action_school_management)d" type="action" >
-                                </button>
-                   </group>
+                  <!-- <group>
+                       <field name="reference_no" />
+                  </group> -->
+                    <div class="oe_title">
+                        <h1>
+                            <field name="reference_no" readonly="1"/>
+                        </h1>
+                    </div>
+               <group>
+                  <group>
+                      <field name="name"/>
+                      <field name="marks"/>
+                      <field name="random" />
+                      <button string='Action Btn' name="%(bi_school_management.action_school_management)d" type="action" >
+                      </button>
+                  </group>
                </group>
                <notebook>
                         <page string="Child Data">
@@ -33,6 +43,11 @@
                         </page>
                 </notebook>
             </sheet>
+            <div class="oe_chatter">
+              <field name="message_follower_ids" />
+              <field name="activity_ids" />
+              <field name="message_ids"/>
+            </div>
         </form>
     </field>
     </record>
